--- a/app/src/main/res/layout/activity_verify_phone.xml
+++ b/app/src/main/res/layout/activity_verify_phone.xml
@@ -10,7 +10,7 @@
         android:id="@+id/otpNumberOne"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:marginStart="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:ems="10"
         android:focusable="auto"
@@ -26,7 +26,7 @@
         android:id="@+id/optNumberTwo"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:marginStart="8dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="number"
         android:maxLength="1"
@@ -40,7 +40,7 @@
         android:id="@+id/otpNumberThree"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:marginStart="8dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="number"
         android:maxLength="1"
@@ -54,7 +54,7 @@
         android:id="@+id/otpNumberFour"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:marginStart="8dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="number"
         android:maxLength="1"
@@ -68,7 +68,7 @@
         android:id="@+id/otpNumberFive"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:marginStart="8dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="number"
         android:maxLength="1"
@@ -82,7 +82,7 @@
         android:id="@+id/optNumberSix"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:marginStart="8dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="number"
         android:maxLength="1"
